Remove Scrollbar and Fix Playlist hight

--- a/src/global.css
+++ b/src/global.css
@@ -15,6 +15,7 @@ body {
   margin: 0;
   background-color: #383b49;
   color: #ffffff;
+  overflow: hidden;
 }
 
 input,
